Fix cut off in input field

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -25,6 +26,10 @@ html {
 body {
   background-color: black;
   color: white;
+}
+
+input {
+  font-family: "Roboto";
 }
 
 * {
